--- a/.rhiza/history
+++ b/.rhiza/history
@@ -20,15 +20,21 @@
 .pre-commit-config.yaml
 .rhiza/docs/CONFIG.md
 .rhiza/docs/TOKEN_SETUP.md
+.rhiza/requirements/README.md
+.rhiza/requirements/docs.txt
+.rhiza/requirements/marimo.txt
+.rhiza/requirements/tests.txt
+.rhiza/requirements/tools.txt
 .rhiza/scripts/book.sh
 .rhiza/scripts/bump.sh
 .rhiza/scripts/customisations/build-extras.sh
 .rhiza/scripts/customisations/post-release.sh
+.rhiza/scripts/generate-coverage-badge.sh
+.rhiza/scripts/install-dev-deps.sh
 .rhiza/scripts/marimushka.sh
 .rhiza/scripts/release.sh
 .rhiza/scripts/update-readme-help.sh
 .rhiza/utils/version_matrix.py
-.rhiza/utils/version_max.py
 CODE_OF_CONDUCT.md
 CONTRIBUTING.md
 Makefile
@@ -39,6 +45,7 @@ book/marimo/rhiza.py
 book/minibook-templates/custom.html.jinja2
 book/pdoc-templates/module.html.jinja2
 pytest.ini
+renovate.json
 ruff.toml
 tests/Makefile.tests
 tests/test_rhiza/README.md
@@ -47,6 +54,7 @@ tests/test_rhiza/benchmarks/README.md
 tests/test_rhiza/benchmarks/analyze_benchmarks.py
 tests/test_rhiza/conftest.py
 tests/test_rhiza/test_bump_script.py
+tests/test_rhiza/test_coverage_badge.py
 tests/test_rhiza/test_docstrings.py
 tests/test_rhiza/test_git_repo_fixture.py
 tests/test_rhiza/test_makefile.py
@@ -54,5 +62,6 @@ tests/test_rhiza/test_marimushka_script.py
 tests/test_rhiza/test_notebooks.py
 tests/test_rhiza/test_readme.py
 tests/test_rhiza/test_release_script.py
+tests/test_rhiza/test_requirements_folder.py
 tests/test_rhiza/test_structure.py
 tests/test_rhiza/test_updatereadme_script.py
